<resources>
    <string name="app_name" translatable="false">FeelWell</string>

    <string name="lorem_ipsum" translatable="false">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>

    <string name="bem_vindo_nde_volta">Bem vindo \nde volta</string>
    <string name="adicionar_entrada">Adicionar entrada</string>
    <string name="emocao">Emocao</string>
    <string name="emoji1">😃</string>
    <string name="seg_30_out">Seg, 30 out</string>
    <string name="tem_anota_o">Tem anotação</string>
    <string name="emoji2">😮‍💨</string>
    <string name="dom_29_out">Dom, 29 out</string>
    <string name="sab_28_out">Sab, 28 out</string>
    <string name="abrir_configura_es">Abrir configurações</string>
    <string name="abrir_estatisticas">abrir estatisticas</string>
    <string name="seu_nresumo">Seu\nResumo</string>
    <string name="semanal">Semanal</string>
    <string name="esta_semana_voc_esteve_feliz">Esta semana você esteve feliz</string>
    <string name="mensal">Mensal</string>
    <string name="app_version">v0.0.1 (Alpha)</string>
    <string name="mude_as_configura_es">Mude as Configurações</string>
    <string name="voc_tamb_m_se_sentiu_assim">Você se sentiu tão bem quanto nesse registro.</string>
    <string name="qua_17_set">Qua, 17 set</string>
    <string name="buscar_data">Buscar um registro</string>
    <string name="como_voc_est_se_sentindo_hoje">Como você está se sentindo?</string>
    <string name="adicionar_anota_o">Quer adicionar uma anotação?</string>
    <string name="compartilhar_emocao">compartilhar emocao</string>
    <string name="salvar_o_novo_registro">Salvar o novo registro</string>
    <string name="abrir_pagin_de_estatisticas">Abrir paginá de estatisticas</string>
    <string name="emoji">😊</string>
    <string name="feliz">Feliz</string>
    <string name="cancelar"><u>CANCELAR</u></string>
    <string name="uld_politica">https://deyvidandrades.github.io/FeelWell/politica/</string>
    <string name="channel_description">criar_registro</string>
    <string name="medidor_de_mood">Medidor de mood</string>
    <string name="registros_removidos">Todos os registros foram removidos\n</string>
    <string name="politica_privacidade"><![CDATA[
        <body cz-shortcut-listen="true">
            <h1>Política de Privacidade do Aplicativo "FeelWell"</h1><p><i>Última atualização: 19/11/2023</i></p>

            <p>O aplicativo "FeelWell" ("nós", "nosso", ou "aplicativo") tem o compromisso de proteger a
                privacidade e os dados pessoais de nossos usuários. Esta Política de Privacidade descreve como
                coletamos, usamos e armazenamos informações quando você utiliza o aplicativo "FeelWell". Ao
                utilizar o aplicativo, você concorda com os termos desta Política de Privacidade.</p>

            <h2>Coleta e Uso de Informações</h2>

            <ul>
                <li><b>Informações Pessoais:</b><br> O aplicativo "FeelWell" não coleta, armazena ou compartilha
                    informações pessoais do usuário. Não exigimos que você forneça seu nome, endereço de e-mail,
                    ou qualquer outra informação de identificação pessoal.
                </li>
                <br>

                <li><b>Dados de Uso:</b><br> O FeelWell coleta apenas informações relacionadas às emoções que você
                    escolhe registrar diariamente. Esses dados incluem a emoção selecionada, anotações (caso
                    adicionadas) e a data do registro. Não coletamos informações pessoais identificáveis,
                    como nome, endereço de e-mail ou número de telefone.
                </li>
                <br>

                <li><b>Configurações de Notificação:</b><br> O aplicativo pode coletar as configurações de
                    notificação definidas pelo usuário para enviar lembretes diários sobre como se sente.
                </li>
                <br>
            </ul>

            <h2>Segurança e Armazenamento de Dados</h2>

            <ul>
                <li>
                    <b>Armazenamento:</b><br> Todas as informações capturadas pelo FeelWell são armazenadas
                    localmente no dispositivo do usuário. Nenhum dado é enviado ou sincronizado com
                    servidores externos.
                </li>
                <br>

                <li>
                    <b>Acesso aos Dados:</b><br> O usuário tem total controle sobre seus dados emocionais.
                    Pode visualizar, editar ou excluir os registros diretamente no aplicativo.
                </li>
                <br>
            </ul>

            <h2>Compartilhamento de Informações</h2>

            <ul>
                <li>
                    <b>Compartilhamento Opcional:</b><br> O usuário tem a opção de compartilhar seu estado
                    emocional com outros aplicativos instalados no dispositivo. Esse compartilhamento
                    cria uma imagem com informações não identificáveis, como o sentimento atual, a
                    última vez que foi sentido, e quaisquer anotações adicionadas.
                </li>
                <br>
            </ul>

            <h2>Alterações na Política de Privacidade</h2>

            <p>
                Reservamos o direito de modificar esta Política de Privacidade a qualquer momento. As alterações
                entrarão em vigor assim que forem publicadas no aplicativo. Recomendamos que você revise
                regularmente esta Política de Privacidade para se manter informado sobre como suas informações
                estão sendo tratadas.
            </p>

            <h2>Contato</h2>

            <p>
                Se você tiver dúvidas, preocupações ou sugestões sobre nossa Política de Privacidade, entre em
                contato conosco pelo <u>deyvid.asilva@gmail.com</u>.
            </p><br>

            <p><b>Ao utilizar o aplicativo "FeelWell", você concorda com esta Política de Privacidade e com o
                processamento de seus dados da maneira descrita acima.</b></p>


            </body>
        ]]>
    </string>
    <string name="pol_tica_de_privacidade">Política\nde privacidade</string>
    <string name="lista_com_os_registros_emocionais">Lista com os registros emocionais</string>
</resources>