<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/rounded_r24_top"
    android:backgroundTint="@color/background"
    android:orientation="vertical"
    android:padding="24dp">

    <View
        android:layout_width="32dp"
        android:layout_height="4dp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/rounded_r16"
        android:backgroundTint="@color/text" />

    <TextView
        android:id="@+id/tv_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="32dp"
        android:text="@string/seg_30_out"
        android:textColor="@color/text"
        android:textSize="32sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_emocao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginVertical="32dp"
        android:text="@string/emoji1"
        android:textColor="@color/textLight"
        android:textSize="48sp" />

    <TextView
        android:id="@+id/tv_anotacao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="32dp"
        android:text="@string/tem_anota_o"
        android:textColor="@color/text"
        android:textSize="16sp"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/registro1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_r16"
        android:backgroundTint="@color/textLight"
        android:orientation="horizontal"
        android:paddingHorizontal="16dp"
        android:paddingVertical="32dp"
        android:weightSum="3">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginHorizontal="12dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/qua_17_set"
                android:textColor="@color/text"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/voc_tamb_m_se_sentiu_assim"
                android:textColor="@color/text"
                android:textSize="14sp" />

        </LinearLayout>

        <TextView
            android:id="@+id/emoji1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|end"
            android:layout_weight="2"
            android:text="@string/emoji1"
            android:textAlignment="textEnd"
            android:textColor="@color/textLight"
            android:textSize="32sp" />

    </LinearLayout>

</LinearLayout>
