<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/rounded_r24_top"
    android:backgroundTint="?android:colorPrimary"
    android:orientation="vertical"
    android:padding="24dp">

    <View
        android:layout_width="32dp"
        android:layout_height="4dp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/rounded_r16"
        android:backgroundTint="?android:colorAccent" />

    <TextView
        android:id="@+id/tv_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="32dp"
        android:text="@string/seg_30_out"
        android:textColor="?android:textColor"
        android:textSize="32sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_emocao_emoji"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:text="@string/emoji1"
        android:textColor="@color/textLight"
        android:textSize="48sp" />

    <TextView
        android:id="@+id/tv_emocao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="8dp"
        android:text="@string/seg_30_out"
        android:textColor="?android:textColor"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/et_anotacao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="32dp"
        android:autofillHints="true"
        android:hint="@string/adicionar_anota_o"
        android:inputType="text|textMultiLine|textImeMultiLine"
        android:minHeight="48sp"
        android:minLines="2"
        android:textAlignment="center"
        android:textColor="?android:textColor"
        android:textSize="16sp" />

    <RelativeLayout
        android:id="@+id/menu_holder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginBottom="16dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/btn_share"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_marginStart="2dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="2dp"
            android:layout_marginBottom="2dp"
            android:background="@drawable/rounded_r24"
            android:backgroundTint="@color/accent"
            android:contentDescription="@string/compartilhar_emocao"
            android:elevation="1dp"
            android:padding="12dp"
            android:src="@drawable/round_share_24"
            app:tint="@color/text" />

        <TextView
            android:id="@+id/btn_cancelar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="8dp"
            android:layout_toStartOf="@+id/btn_save"
            android:layout_toEndOf="@+id/btn_share"
            android:gravity="center"
            android:minHeight="48dp"
            android:text="@string/cancelar"
            android:textAlignment="center"
            android:textColor="@color/text"
            android:textSize="16sp" />

        <ImageView
            android:id="@+id/btn_save"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="2dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="2dp"
            android:layout_marginBottom="2dp"
            android:background="@drawable/rounded_r24"
            android:backgroundTint="@color/accent"
            android:contentDescription="@string/salvar_o_novo_registro"
            android:elevation="1dp"
            android:padding="8dp"
            android:src="@drawable/round_check_24"
            app:tint="@color/text" />
    </RelativeLayout>
</LinearLayout>
