<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="32dp"
    android:fitsSystemWindows="true"
    tools:context=".activities.MainActivity">

    <ImageView
        android:id="@+id/btn_statistics"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginHorizontal="32dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/rounded_r24"
        android:backgroundTint="?android:colorAccent"
        android:contentDescription="@string/abrir_pagin_de_estatisticas"
        android:elevation="1dp"
        android:padding="12dp"
        android:src="@drawable/round_timeline_24" />

    <RelativeLayout
        android:id="@+id/menu_holder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/btn_opcoes"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="2dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="2dp"
            android:layout_marginBottom="2dp"
            android:background="@drawable/rounded_r24"
            android:backgroundTint="?android:colorAccent"
            android:contentDescription="@string/abrir_configura_es"
            android:elevation="2dp"
            android:padding="8dp"
            android:src="@drawable/round_short_text_24"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/title_holder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:minHeight="165dp">

        <View
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginStart="-80dp"
            android:background="@drawable/rounded_r24"
            android:backgroundTint="?android:colorAccent"
            android:paddingHorizontal="16dp"
            android:paddingVertical="4dp"
            android:rotation="10" />

        <TextView
            android:id="@+id/bem_vindo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:paddingHorizontal="32dp"
            android:text="@string/bem_vindo_nde_volta"
            android:textSize="48sp"
            android:textStyle="bold" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/busca_holder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title_holder"
        android:layout_centerHorizontal="true"
        android:elevation="1dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/et_buscar"
            android:layout_width="256dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="16dp"
            android:autofillHints="false"
            android:hint="@string/buscar_data"
            android:inputType="text"
            android:minHeight="48sp"
            android:textAlignment="center"
            android:textColor="?android:textColor"
            android:textSize="24sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:alpha=".1"
            android:backgroundTint="?android:textColor"/>
    </LinearLayout>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swiperefresh"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/busca_holder">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_registros"
            android:contentDescription="@string/lista_com_os_registros_emocionais"

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/busca_holder" />

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

</RelativeLayout>