<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:layout_weight="1"
    app:cardBackgroundColor="?android:colorAccent"
    app:cardCornerRadius="24dp"
    app:cardElevation="0dp">

    <nl.dionsegijn.konfetti.xml.KonfettiView
        android:id="@+id/konfettiView"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical">

            <com.google.android.material.progressindicator.CircularProgressIndicator
                android:id="@+id/progress"
                android:layout_width="96dp"
                android:layout_height="96dp"
                android:layout_gravity="center_horizontal"
                android:max="100"
                android:progress="64"
                app:indicatorColor="?android:colorPrimary"
                app:indicatorDirectionCircular="clockwise"
                app:indicatorSize="96dp"
                app:trackColor="?android:textColor"
                app:trackThickness="16dp" />

            <TextView
                android:id="@+id/tv_porcentagem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/emoji"
                android:textColor="?android:textColor"
                android:textSize="32sp"
                android:textStyle="bold" />
        </RelativeLayout>

        <TextView
            android:id="@+id/tv_emocao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/feliz"
            android:textColor="?android:textColor"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_porcentagem_texto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tem_anota_o"
            android:textColor="?android:textColor"
            android:textSize="16sp" />

    </LinearLayout>
</androidx.cardview.widget.CardView>